Style: fixed stats page overlapping wrong

--- a/components/Sidebar.module.css
+++ b/components/Sidebar.module.css
@@ -23,6 +23,7 @@
     padding: 10px 10px 5px 10px;
     color: white;
     margin: 10px;
+    border: 2px solid #FFFF;
 }
 
 .sidebar-btn {
