--- a/components/StatsPage.module.css
+++ b/components/StatsPage.module.css
@@ -23,7 +23,7 @@
 
 .stat-card > .title {
     color: white;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 600;
     position: relative;
     display: block;
@@ -32,7 +32,7 @@
 
 .stat-card > .stat {
     color: white;
-    font-size: 100px;
+    font-size: 5rem;
     margin: 0px;
     font-weight: 1000;
     position: relative;
